[metadata]
name = coalpy
version = 0.0.1
author = Kleber A Garcia
author_email = kecho_garcia@hotmail.com
description = CoalPy - Compute Abstraction Layer for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/kecho/coalpy
project_urls =
    Bug Tracker = https://github.com/kecho/coalpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
include_package_data = True
packages = coalpy, coalpy.examples
package_dir =
    =src
python_requires = >=3.6

[options.packages.find]
where=src
